manifests/wordpress-mariadb-service-headless.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mariadb-headless
  namespace: default
  labels:
    app.kubernetes.io/instance: wordpress
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: mariadb
spec:
  ports:
  - name: mysql
    protocol: TCP
    port: 3306
    targetPort: mysql
  selector:
    app.kubernetes.io/instance: wordpress
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: mariadb
  clusterIP: None
  type: ClusterIP
  publishNotReadyAddresses: true
  internalTrafficPolicy: Cluster
...
