manifests/wordpress-mariadb-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: wordpress
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: mariadb
  name: wordpress-mariadb
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: mysql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: wordpress
    app.kubernetes.io/name: mariadb
  type: ClusterIP
...
