manifests/wordpress-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: wordpress
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/part-of: wordpress
  name: wordpress
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: wordpress
    app.kubernetes.io/name: wordpress
  type: ClusterIP
...
