manifests/wordpress-httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wordpress
  namespace: default
spec:
  parentRefs:
    - name: eg
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: wordpress
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
...
